APP03022-mrch.bff.somx.ppsomx.finanzas/kustomization/development/env-var.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ${PROJECT_NAME}

spec:
  template:
    spec:
      automountServiceAccountToken: false

      containers:
        - name: ${PROJECT_NAME}

          resources:
            requests:
              cpu: "25m"
              memory: "512Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "250m"
              memory: "1Gi"
