APP03022-mrch.bff.somx.ppsomx.finanzas/kustomization/development/resources.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ${PROJECT_NAME}

spec:
  template:
    spec:
      automountServiceAccountToken: false

      containers:
        - name: ${PROJECT_NAME}

          resources:
            limits:
              memory: "400Mi"
            requests:
              cpu: "50m"
              memory: "200Mi"
              ephemeral-storage: "256Mi"
